--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,29 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-.alert-container{}
+.container-wrapper{
+
+}
+
+.container-wrapper--red{
+    background-color: #f05f40;
+    color: white;
+}
+
+.alert-container .col-12{
+    padding-right: 0;
+    padding-left: 0;
+}
+
+.site-wide-alert{
+    border-radius: 0;
+    margin-bottom: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 0px;
+    background-color:#f2c840;
+    border-color:#f2c840;
+}
 
 .callout-container{
     height: 100vh;
@@ -33,10 +55,25 @@ body {
 
 .features-container{}
 
+.page-header{
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+}
+
+.page-header h2{
+    margin-top: 0;
+}
+
+.quotes .page-header{
+    margin-bottom: 25px;
+}
+
 .block-divider{
   height: 5px;
   width: 75px;
   border: 0;
+  background-color: #444
 }
 
 .block-divider-orange {
@@ -46,6 +83,43 @@ body {
 
 .block-divider-short{
     width: 35px;
+}
+
+.block-divider-white{
+    background-color: white;
+}
+
+.content-container{
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+
+.navalert-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: 0;
+    padding-right: 0;
+    z-index: 1;
+
+}
+
+.navbar{
+    margin-bottom: 0;
+    width: 100%;
+    border: 0;
+    background-color: rgba(0,0,0,0)
+}
+
+.navbar .navbar-toggler{
+    border: 0;
+}
+
+.navbar-brand{
+    font-weight: bold;
+}
+.navbar .navbar-nav a{
+    font-weight: bold;
 }
 
 .jumbotron {
@@ -90,4 +164,25 @@ body {
     border-color: #df4929;
     color: white;
 
+}
+
+.feature{
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.feature i{
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height: 45px;
+}
+
+.feature .btn{
+    background-color: white;
+    border-color: white;
+    border-radius: 15px;
+    min-width: 100px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #f05f40;
 }
